april fool commit

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>horde</title>
   <script src="p5.js"></script>
+  <script src="util.js"></script>
   <script src="horde.js"></script>
   <script src="sketch.js"></script>
   <style>
@@ -10,7 +11,7 @@
         margin:0;
     }
     canvas{
-        background:pink;
+        border:1px solid gray;
     }
   </style>
 </head>
